--- a/src/domainComponents/TableWithRemote/index.less
+++ b/src/domainComponents/TableWithRemote/index.less
@@ -1,10 +1,12 @@
 
 .default{
   border-right: 1px solid #FFFFFF;
+  word-break: break-all;
 }
 
 
 .table{
+  // overflow: hidden;
   :global{
     .ant-table-tbody>tr>td, .ant-table-thead>tr>th{
       padding: 10px 5px;
